Fix logo spacing

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -151,10 +151,10 @@
 }
 
 .logo {
-  margin-left: -5px;
-  padding-left: 39px;
+  margin-left: -.2em;
+  padding-left: 1.65em;
   background-repeat: no-repeat;
-  background-size: 30px;
+  background-size: 1.25em;
   background-position: left center;
 }
 
